guardo los cambios en estilos y en el index un parrafo

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 </head>
 <body>
     <h1>mi proyecto en git y github</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur quis itaque asperiores.</p>
 </body>
 </html>
